--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
             <!-- Player de Áudio - Agora usando a tag <audio> com arquivo local -->
             <div class="audio-player-container">
-                <p class="text-gray-700 text-lg mb-2">Ouça uma mensagem especial!</p>
+                <p class="text-gray-700 text-lg mb-2">Música!</p>
                 <audio controls loop muted>
                     <source src="audio/VINHETA%20PARAB%C3%89NS%20PRA%20VOC%C3%8A%20na%20Viola%20Caipira.mp3" type="audio/mpeg">
                     O seu navegador não suporta o elemento de áudio.
@@ -134,7 +134,7 @@
                     <span class="font-semibold">Data:</span> 06 de Setembro de 2025
                 </p>
                 <p class="text-lg text-gray-600 mb-2">
-                    <span class="font-semibold">Início:</span> 12h00
+                    <span class="font-semibold">Início:</span> 13h00
                 </p>
                 <!-- Localização adicionada -->
                 <p class="text-lg text-gray-600 mb-2">
@@ -152,19 +152,19 @@
                 <h2 class="text-2xl font-bold text-gray-700 mb-4">Programação Especial:</h2>
                 <div class="text-left">
                     <div class="program-item">
-                        <span class="program-time">12h00:</span>
+                        <span class="program-time">13h00:</span>
                         <span class="program-description">Roda de Violeiros: Jorge e Jefferson</span>
                     </div>
                     <div class="program-item">
-                        <span class="program-time">14h00:</span>
+                        <span class="program-time">15h00:</span>
                         <span class="program-description">Dupla Sertaneja: Zé Neto e Vinícius</span>
                     </div>
                     <div class="program-item">
-                        <span class="program-time">16h00:</span>
+                        <span class="program-time">17h00:</span>
                         <span class="program-description">Show Surpresa!</span>
                     </div>
                     <div class="program-item">
-                        <span class="program-time">17h00:</span>
+                        <span class="program-time">18h00:</span>
                         <span class="program-description">DJ Marcelo Massari</span>
                     </div>
                 </div>
@@ -192,3 +192,4 @@
     </script>
 </body>
 </html>
+
